<resources>
    <string name="app_name">Autoservice</string>

    <string name="title_orders">Заказы</string>
    <string name="title_mechanics">Механики</string>
    <string name="title_notifications">Уведомления</string>
    <string name="title_statistics">Статистика</string>
    <string name="title_profile">Профиль</string>
    <string name="title_profile_skills">Навыки</string>
    <string name="title_profile_mechanics">Механики</string>

    <string name="mechanics_name">Mechanics_name</string>
    <string name="mechanics_phone">+79999999999</string>

    <string name="current_orders_title">Заказ №</string>
    <string name="current_orders_responsible">Ответственный:</string>
    <string name="current_orders_client">Клиент:</string>
    <string name="current_orders_client_car_model">Марка и модель автомобиля:</string>
    <string name="current_orders_client_car_number">Номер автомобиля:</string>
    <string name="current_orders_client_car_vin">VIN - номер:</string>
    <string name="current_orders_client_service">Услуга:</string>
    <string name="current_orders_client_service_cost">Стоимость услуги:</string>
    <string name="current_orders_client_description_problem">Описание проблемы:</string>
    <string name="current_orders_start_work">Начало работы:</string>
    <string name="current_orders_end_work">Примерная дата окончания работ:</string>
    <string name="current_orders_comment">Комментарий:</string>

    <string name="new_orders_title">Новые заказы</string>
    <string name="completed_orders_title">История выполненных заказов</string>
    <string name="title_activity_maps">MapsActivity</string>

</resources>