<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_orders">

    <fragment
        android:id="@+id/report_order"
        android:name="com.example.autoservice.ui.orders.ReportFragment"
        android:label="Отчёт"
        tools:layout="@layout/fragment_report"
        />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.example.autoservice.ui.orders.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders">
        <action
            android:id="@+id/action_orderFragment_to_reportFragment"
            app:destination="@id/report_order" />
    </fragment>

    <fragment
        android:id="@+id/navigation_mechanics"
        android:name="com.example.autoservice.ui.mechanics.MechanicsFragment"
        android:label="@string/title_mechanics"
        tools:layout="@layout/fragment_mechanics" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.autoservice.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_profileFragment_to_skillsFragment"
            app:destination="@id/profile_skillsFragment" />
        <action
            android:id="@+id/action_profileFragment_to_mechanicsFragment"
            app:destination="@id/profile_mechanicsFragment" />

    </fragment>

    <fragment
        android:id="@+id/profile_skillsFragment"
        android:name="com.example.autoservice.ui.profile.profile_skills.Profile_SkillsFragment"
        android:label="@string/title_profile_skills"
        tools:layout="@layout/fragment_profile_skills"
        >
    </fragment>

    <fragment
        android:id="@+id/profile_mechanicsFragment"
        android:name="com.example.autoservice.ui.profile.profile_skills.Profile_MechanicsFragment"
        android:label="@string/title_profile_mechanics"
        tools:layout="@layout/fragment_profile_mechanics"
        >
    </fragment>

</navigation>