<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="6dp"
    android:minHeight="70dp"
    app:cardElevation="8dp"
    app:cardBackgroundColor="#FFFFFF"
    app:strokeColor="#E6D21F"
    app:strokeWidth="3dp"
    android:layerType="hardware">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linear_layout"
        android:orientation="vertical"
        android:paddingStart="20sp"
        android:paddingEnd="20sp">

            <TextView
                android:id="@+id/order_title"
                android:layout_width="wrap_content"
                android:layout_height="70dp"
                android:gravity="center"
                android:text="@string/title_new_orders"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/expandable_layout"
            android:layout_marginBottom="12sp"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/responsible_title"
                    android:text="@string/current_orders_responsible"
                    android:textSize="@dimen/current_order_text_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/responsible_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/client_title"
                    android:text="@string/current_orders_client"
                    android:textColor="@color/current_orders_title_text_color"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/client_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_model_title"
                    android:text="@string/current_orders_client_car_model"
                    android:textColor="@color/current_orders_title_text_color"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_model_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_number_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_client_car_number"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_number_text"
                    android:text=""
                    android:textColor="@color/black"
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_vin_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_client_car_vin"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/car_vin_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/service_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_client_service"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/service_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/cost_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_client_service_cost"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:id="@+id/cost_text"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/description_problem_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_client_description_problem"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/description_problem_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/start_work_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_start_work"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/start_work_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/end_work_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_end_work"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/end_work_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/comment_title"
                    android:textColor="@color/current_orders_title_text_color"
                    android:text="@string/current_orders_comment"
                    android:textSize="@dimen/current_order_text_title"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:id="@+id/comment_text"
                    android:textColor="@color/black"
                    android:text=""
                    android:textSize="@dimen/current_order_text"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</com.google.android.material.card.MaterialCardView>